--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -154,8 +154,6 @@
           
         </div>
 
-        </div>
-
         <div class="nlp_retweet">
           <h3 class="nlp_retweet_link"><a href=https://github.com/anirag/Social-Media-Prediction-Challenge---2nd-Place-solution>Social Media Prediction</a></h3>
           
@@ -173,7 +171,7 @@
         <header class="section-header">
           <h2>Personal Projects</h2>
         </header>
-          <p>My favourite sport is Soccer. I play in mini leagues and a big fan of premier league. When I have time, I like to combine my interest in data and sport to come up with few analysis.</p>
+          <p>I am a big fan of Soccer and premier league.I also play in mini leagues. When I have time, I like to combine my interest in data and sport to come up with interesting analysis.</p>
         <div class="fpl">
           <h3 class="fpl-link"><a href="https://github.com/anirag/fpl">Optimization for Fantasy Premier League</a></h3>
           <p class="fpl-details">A Linear Programming System that provides the optimal team to field every week of fantasy sport. Work in progress to assist in substitutions as well.</p>
