edit few sections

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -178,7 +178,7 @@
         </div>
         
         <div class="var">
-          <h3 class="var-link"><a href="https://github.com/anirag/VAR">Sentiment Analysis on fans reaction to VAR</a></h3>
+          <h3 class="var-link"><a href="https://github.com/anirag/VAR-sentiment-analysis">Sentiment Analysis on fans reaction to VAR</a></h3>
           <p class="var-desc">Video Assistant Refree is a match official who reiews decisions of head refree using video, image technologies. English Premier League began to use VAR in all of its matches from season 2019/2020. There has been a big controversy wek after week amongst professionals, fans and football enthusiasts regarding this decison. In this project, I will try to gauge the sentiment of people towards VAR using tweets.</p>
         </div>
       </section>
