added fpl section

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -173,7 +173,7 @@
         </header>
           <p>I am a big fan of Soccer and premier league.I also play in mini leagues. When I have time, I like to combine my interest in data and sport to come up with interesting analysis.</p>
         <div class="fpl">
-          <h3 class="fpl-link"><a href="https://github.com/anirag/fpl">Optimization for Fantasy Premier League</a></h3>
+          <h3 class="fpl-link"><a href="https://github.com/anirag/fpl-team-selection">Optimization for Fantasy Premier League</a></h3>
           <p class="fpl-details">A Linear Programming System that provides the optimal team to field every week of fantasy sport. Work in progress to assist in substitutions as well.</p>
         </div>
         
