modified project title

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -74,7 +74,7 @@
                 <li>Obtained a 15% reduction in inventory costs along with desired service level and stockout thresholds.</li>
               </ul>  
             </li>
-            <li>Internal Customer Churn Scoring
+            <li>Customer Attrition
               <ul>
                 <li>Led the design and development of Machine Learning model and associated pipeline for customer attrition scoring module within Infor's CRM software<\li>
                 <li>Model has been able to capture 75% customer churn, during back-testing and identify individualized business metrics impacting churn. </li>
