added link to related projects

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -126,7 +126,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Related Projects</h2>
+          <h2><a id="related_projects">Related Projects</h2>
         </header>
 
         <div class="kaggle">
