--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -169,7 +169,7 @@
       <!-- begin Projects -->
       <section class="content-section">
         <header class="section-header">
-          <h2>Personal Projects</h2>
+          <h2><a id="personal_projects">Personal Projects</h2>
         </header>
           <p>I am a big fan of Soccer and premier league.I also play in mini leagues. When I have time, I like to combine my interest in data and sport to come up with interesting analysis.</p>
         <div class="fpl">
@@ -179,7 +179,7 @@
         
         <div class="var">
           <h3 class="var-link"><a href="https://github.com/anirag/VAR-sentiment-analysis">Sentiment Analysis on fans reaction to VAR</a></h3>
-          <p class="var-desc">Video Assistant Refree is a match official who reiews decisions of head refree using video, image technologies. English Premier League began to use VAR in all of its matches from season 2019/2020. There has been a big controversy wek after week amongst professionals, fans and football enthusiasts regarding this decison. In this project, I will try to gauge the sentiment of people towards VAR using tweets.</p>
+          <p class="var-desc">Video Assistant Refree is a match official who reiews decisions of head refree using video, image technologies. English Premier League began to use VAR in all of its matches from season 2019/2020. There has been a big controversy wek after week amongst professionals, fans and football enthusiasts regarding this decison. In this project, I will try to gauge the sentiment of people towards VAR using tweets. Alos, experimented with pretrained models such asBERT and ULMfit models</p>
         </div>
       </section>
       <!-- end Projects -->
