--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -57,7 +57,7 @@
               <ul>
             <li>Led the design and development of Machine Learning model and associated pipeline for lead scoring module within Infor's CRM software</li>
             <li>Successfully deployed the model integrated with explainer system helping marketers to transform data insights into actions</li>
-            <li>Achieved a 3x lift in conversion rates which increased the e"ciency of business representatives in targeting leads</li>
+            <li>Achieved a 3x lift in conversion rates which increased the effciency of business representatives in targeting leads</li>
               </ul>
             </li>
           <li>Predictive Maintenance
@@ -110,7 +110,7 @@
 
         <div class="uta">
           <h3 class="uta-title">The University of Texas at Austin, Texas. USA</h3>
-          <h4 class="uta-details">Master's Degree, Operations Research & Industrial Engineering &bull; Aug 2012 &mdash; MAy 2014</h4>
+          <h4 class="uta-details">Master's Degree, Operations Research & Industrial Engineering &bull; Aug 2012 &mdash; May 2014</h4>
         </div>
         <div class="nitt">
           <h3 class="nitt-title">National Institute of Technology, Trichy, India</h3>
@@ -157,7 +157,7 @@
         <div class="price_forecasting">
           <h3 class="price_forecasting_link"><a href=https://github.com/anirag/avocado-price-prediction>Avocado Price Forecasting</a></h3>
           
-          <p> Here, I experiment with diffrent methods, classic time series algorithms as well as ensemble decision trees to forecast price for avocado in various US Regions. </p>
+          <p> Here, I experiment with different methods, classic time series algorithms as well as ensemble decision trees to forecast price for avocado in various US Regions. </p>
           
         </div>
 
@@ -179,7 +179,7 @@
         
         <div class="var">
           <h3 class="var-link"><a href="https://github.com/anirag/VAR-sentiment-analysis">Sentiment Analysis on fans reaction to VAR</a></h3>
-          <p class="var-desc">Video Assistant Refree is a match official who reiews decisions of head refree using video, image technologies. English Premier League began to use VAR in all of its matches from season 2019/2020. There has been a big controversy wek after week amongst professionals, fans and football enthusiasts regarding this decison. In this project, I will try to gauge the sentiment of people towards VAR using tweets. Alos, experimented with pretrained models such asBERT and ULMfit models</p>
+          <p class="var-desc">Video Assistant Referee is a match official who reviews decisions of head referee using video, image technologies. English Premier League began to use VAR in all of its matches from season 2019/2020. There has been a big controversy week after week amongst professionals, fans and football enthusiasts regarding this decision. In this project, I will try to gauge the sentiment of people towards VAR using tweets. Also, experimented with pre-trained models such as BERT and ULMfit models</p>
         </div>
       </section>
       <!-- end Projects -->
