--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -57,7 +57,7 @@
               <ul>
             <li>Led the design and development of Machine Learning model and associated pipeline for lead scoring module within Infor's CRM software</li>
             <li>Successfully deployed the model integrated with explainer system helping marketers to transform data insights into actions</li>
-            <li>Achieved a 3x lift in conversion rates which increased the effciency of business representatives in targeting leads</li>
+            <li>Achieved a 3x lift in conversion rates which increased the efficiency of business representatives in targeting leads</li>
               </ul>
             </li>
           <li>Predictive Maintenance
