Added sagemaker to AWS tools

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -206,7 +206,7 @@
 
         <div class="aws">
           <h4 class="aws-details">Amazon Web Services</h4>
-          <p class="aws-list">EC2, S3 and EMR</p>
+          <p class="aws-list">EC2, S3, SageMaker and EMR</p>
         </div>
 
       </section>
