Make project title bold

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -59,7 +59,7 @@
           also experience in building dashboards to communicate results and model interpretations to
           stakeholders/decision makers.</p>
         <ul class="infor-job-role">
-          <li>Lead Scoring
+          <li><b>Lead Scoring</b>
             <ul>
               <li>Led the design and development of Machine Learning model and associated pipeline for lead scoring
                 module within Infor's CRM software</li>
@@ -69,7 +69,7 @@
                 targeting leads</li>
             </ul>
           </li>
-          <li>Predictive Maintenance
+          <li><b>Predictive Maintenance</b>
             <ul>
               <li>Developed the Machine Learning model for predictive maintenance module within Infor's EAM software for
                 oil refineries<\li>
@@ -79,7 +79,7 @@
                 improve utilization of pumps </li>
             </ul>
           </li>
-          <li>Customer Attrition
+          <li><b>Customer Attrition</b>
             <ul>
               <li>Led the design and development of Machine Learning model and associated pipeline for customer
                 attrition scoring module within Infor's CRM software<\li>
@@ -89,7 +89,7 @@
                 high risk churning customers. </li>
             </ul>
           </li>
-          <li>B2B SaaS Profiling/Upsell
+          <li><b>B2B SaaS Profiling/Upsell</b>
             <ul>
               <li>Created predictive model for business operations to identify and target customer accounts for SaaS
                 upgrades<\li>
@@ -100,7 +100,7 @@
                 model results</li>
             </ul>
           </li>
-          <li>Inventory Optimization
+          <li><b>Inventory Optimization</b>
             <ul>
               <li>Designed Inventory Intelligence application, for supply chain software, that prescribes optimum
                 inventory levels
@@ -111,7 +111,7 @@
               </li>
             </ul>
           </li>
-          <li>Cost Reduction
+          <li><b>Cost Reduction</b>
             <ul>
               <li>Built a cost model tool to reduce company spend on AWS compute and storage</li>
               <li>Identified a savings of ~10M in compute and ~2M in storage</li>
