minor changes to layout

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -72,7 +72,7 @@
           <li><b>Predictive Maintenance</b>
             <ul>
               <li>Developed the Machine Learning model for predictive maintenance module within Infor's EAM software for
-                oil refineries<\li>
+                oil refineries</li>
               <li>Worked with Engineering and IT team to utilize equipment data and IoT data to capture pump failure
                 patterns and features to monitor pump performance</li>
               <li>Implemented at multiple locations, the model reduced maintenance costs by 10% enabling customers to
@@ -82,7 +82,7 @@
           <li><b>Customer Attrition</b>
             <ul>
               <li>Led the design and development of Machine Learning model and associated pipeline for customer
-                attrition scoring module within Infor's CRM software<\li>
+                attrition scoring module within Infor's CRM software</li>
               <li>Model has been able to capture 75% customer churn, during back-testing and identify individualized
                 business metrics impacting churn. </li>
               <li>Currently working on implementing a closed loop process to alert Subscription Services Managers of
