minor changes to layout

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -92,7 +92,7 @@
           <li><b>B2B SaaS Profiling/Upsell</b>
             <ul>
               <li>Created predictive model for business operations to identify and target customer accounts for SaaS
-                upgrades<\li>
+                upgrades</li>
               <li>Using customers' profile and behavior pattern built propensity of the target customers to purchase
                 various
                 products/services o#erings</li>
